# robost

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE-APACHE  LICENSE-MIT  README.md  README_ja.md  README_zh.md  SPEC.md  deny.toml  install_deps.bat  mkdocs.yml  run.bat  run.sh  setup_build_env.bat  stop.bat  stop.sh
.cargo/: audit.toml  config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  publish.yml  release.yml  security-audit.yml
apps/electron-editor/: IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.txt  PACKAGING.md  QA_TEST_RESULTS.md  README.md  TASK18_FILES.md  TASK18_IMPLEMENTATION.md  TASK18_QUICKSTART.md  TASKS.md  TASK_17_CHECKLIST.md  TASK_17_IMPLEMENTATION.md  TASK_17_README.md  TASK_17_SUMMARY.md  TASK_19_IMPLEMENTATION.md  TASK_19_USAGE_GUIDE.md  TEST_PLAN.md  forge.config.js  package-lock.json  package.json  package.json.bak  tsconfig.json  webpack.main.config.js  webpack.renderer.config.js  webpack.rules.js
apps/electron-editor/.github/workflows/: build.yml
apps/electron-editor/assets/: entitlements.plist
apps/electron-editor/scripts/: build-rpa.js
apps/electron-editor/src/: index.html
apps/electron-editor/src/main/: index.ts  preload.ts  rpaManager.ts
apps/electron-editor/src/renderer/: App.css  App.tsx  globals.css  i18n.ts  index.tsx
apps/electron-editor/src/renderer/components/: ActivityBar.tsx  AiPanel.css  AiPanel.tsx  BreakpointManager.css  BreakpointManager.tsx  Canvas.css  Icons.tsx  (+24 more)
apps/web-editor/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
apps/web-editor/src/: App.css  App.tsx  index.css
apps/web-editor/src/api/: client.ts
apps/web-editor/src/components/: AiChat.css  AiChat.tsx  NodePalette.tsx  ScenarioListItem.css  ScenarioListItem.tsx  Sidebar.css  Sidebar.tsx  StepEditor.css  StepEditor.tsx
apps/web-editor/src/pages/: ScenarioPage.css  ScenarioPage.tsx  SettingsPage.css  SettingsPage.tsx
apps/web-editor/src/store/: appStore.ts  runStore.ts  scenarioStore.ts
apps/web-editor/src/utils/: stepTemplates.ts  yamlFlow.ts
crates/robost/: Cargo.toml
crates/robost-backend/: Cargo.toml
crates/robost-backend/src/: lib.rs  local.rs
crates/robost-capture/: Cargo.toml
crates/robost-capture/src/: lib.rs
crates/robost-cli/: Cargo.toml
crates/robost-cli/src/: config.rs  main.rs  scheduler.rs  server.rs  tray.rs
crates/robost-core/: Cargo.toml
crates/robost-core/src/: data_source.rs  engine.rs  lib.rs  progress.rs  report.rs  scenario.rs  variables.rs
crates/robost-core/tests/: scenario_engine.rs
crates/robost-editor/: Cargo.toml
crates/robost-editor/src/: ai_integration.rs  app.rs  canvas.rs  flow_helpers.rs  flowchart.rs  i18n.rs  main.rs  property_panel.rs  settings.rs  state.rs  step_templates.rs  tokens.rs  types.rs
crates/robost-input/: Cargo.toml
crates/robost-input/src/: lib.rs
crates/robost-plugin-api/: Cargo.toml
crates/robost-plugin-api/src/: lib.rs
crates/robost-plugin-host/: Cargo.toml
crates/robost-plugin-host/src/: lib.rs
crates/robost-script/: Cargo.toml
crates/robost-script/src/: lib.rs
crates/robost-snip/: Cargo.toml
crates/robost-snip/src/: app.rs  main.rs
crates/robost-stdlib/: Cargo.toml
crates/robost-stdlib/src/: archive.rs  db.rs  excel.rs  ftp.rs  keychain.rs  lib.rs  list.rs  mail.rs  notify.rs  number.rs  pdf.rs
crates/robost-template/: Cargo.toml
crates/robost-template/src/: lib.rs
crates/robost-uia/: Cargo.toml
crates/robost-uia/src/: lib.rs
crates/robost-vision/: Cargo.toml
crates/robost-vision/benches/: template_match.rs
crates/robost-vision/examples/: basic_match.rs  diff_example.rs  find_all_example.rs  vision_detect.rs
crates/robost-vision/src/: async_util.rs  diff.rs  lib.rs  ml.rs  ocr.rs  ocr_ocrs_cjk.rs  ocr_winrt.rs  prepared.rs  template_match.rs  types.rs
crates/robost-web/: Cargo.toml
crates/robost-web/src/: lib.rs
crates/robost/src/: lib.rs
crates/rpa-backend/: Cargo.toml
crates/rpa-backend/src/: lib.rs  local.rs
crates/rpa-capture/: Cargo.toml
crates/rpa-capture/src/: lib.rs
crates/rpa-cli/: Cargo.toml
crates/rpa-cli/src/: config.rs  main.rs  scheduler.rs  tray.rs
crates/rpa-core/: Cargo.toml
crates/rpa-core/src/: engine.rs  report.rs  scenario.rs
crates/rpa-editor/: Cargo.toml
crates/rpa-editor/src/: main.rs
crates/rpa-input/: Cargo.toml
crates/rpa-input/src/: lib.rs
crates/rpa-plugin-api/: Cargo.toml
crates/rpa-plugin-host/: Cargo.toml
crates/rpa-plugin-host/src/: lib.rs
crates/rpa-script/: Cargo.toml
crates/rpa-script/src/: lib.rs
crates/rpa-snip/: Cargo.toml
crates/rpa-snip/src/: app.rs  main.rs
crates/rpa-stdlib/: Cargo.toml
crates/rpa-stdlib/src/: archive.rs  db.rs  excel.rs  keychain.rs  lib.rs  list.rs  mail.rs  notify.rs  number.rs  pdf.rs
crates/rpa-template/: Cargo.toml
crates/rpa-template/src/: lib.rs
crates/rpa-uia/: Cargo.toml
crates/rpa-uia/src/: lib.rs
crates/rpa-vision/: Cargo.toml
crates/rpa-vision/src/: lib.rs  ml.rs  ocr.rs  template_match.rs  types.rs
crates/rpa-web/: Cargo.toml
crates/rpa-web/src/: lib.rs
docs/: benchmarks.md  index.ja.md  index.md  index.zh.md
docs/guides/: install.ja.md  install.md  install.zh.md  quickstart.ja.md  quickstart.md  quickstart.zh.md  scenario.ja.md  scenario.md  scenario.zh.md
docs/steps/: archive.ja.md  archive.md  archive.zh.md  clipboard.ja.md  clipboard.md  clipboard.zh.md  control_flow.ja.md  control_flow.md  control_flow.zh.md  db.ja.md  db.md  db.zh.md  dialogs.ja.md  dialogs.md  dialogs.zh.md  excel.ja.md  excel.md  excel.zh.md  files.ja.md  files.md  files.zh.md  image.ja.md  image.md  image.zh.md  input.ja.md  input.md  input.zh.md  mail.ja.md  mail.md  mail.zh.md  notify.ja.md  notify.md  notify.zh.md  scripts.ja.md  scripts.md  scripts.zh.md  uia.ja.md  uia.md  uia.zh.md  variables.ja.md  (+8 more)
examples/: data.csv  data_source.yaml  hello.yaml
examples/remote/: rdp_ocr_click.yaml
examples/windows/: calculator.yaml  notepad.yaml
installer/: launch-agent.ps1  launch-agent.vbs  robost-setup.iss
(+21 files in other folders)
