[workspace]
resolver = "2"
members = [
    "crates/robost",
    "crates/robost-template",
    "crates/robost-capture",
    "crates/robost-input",
    "crates/robost-vision",
    "crates/robost-backend",
    "crates/robost-core",
    "crates/robost-snip",
    "crates/robost-plugin-api",
    "crates/robost-plugin-host",
    "crates/robost-script",
    "crates/robost-stdlib",
    "crates/robost-uia",
    "crates/robost-web",
    "crates/robost-cli",
]

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kent-tokyo/robost"
rust-version = "1.89"

[workspace.dependencies]
# Internal crates
robost-template   = { path = "crates/robost-template",   version = "0.1.1" }
robost-capture    = { path = "crates/robost-capture",    version = "0.1.1" }
robost-input      = { path = "crates/robost-input",      version = "0.1.1" }
robost-vision     = { path = "crates/robost-vision",     version = "0.1.1" }
robost-backend    = { path = "crates/robost-backend",    version = "0.1.1" }
robost-core       = { path = "crates/robost-core",       version = "0.1.1" }
robost-plugin-api = { path = "crates/robost-plugin-api", version = "0.1.1" }
robost-plugin-host = { path = "crates/robost-plugin-host", version = "0.1.1" }
robost-script     = { path = "crates/robost-script",     version = "0.1.1" }
robost-stdlib     = { path = "crates/robost-stdlib",     version = "0.1.1" }
robost-uia        = { path = "crates/robost-uia",        version = "0.1.1" }
robost-web        = { path = "crates/robost-web",        version = "0.1.1" }

# Error handling
thiserror = "2.0"
anyhow    = "1.0"

# Async
tokio = { version = "1.52", features = [
    "rt-multi-thread",
    "fs",
    "io-util",
    "io-std",
    "process",
    "sync",
    "time",
    "macros",
    "signal",
    "net",
] }

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml  = "0.0.12"
toml       = "0.8"

# Image processing
image     = "0.25"
imageproc = "0.26"

# Screen capture
xcap = "0.9"

# Input emulation
enigo = "0.6"

# GUI (robost-snip)
eframe        = "0.35"
egui          = "0.35"
egui_extras   = { version = "0.35", features = ["svg"] }
tray-icon     = "0.24"
global-hotkey = "0.8"

# Plugin / scripting
rhai     = { version = "1.24", features = ["sync"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Date/time
chrono = { version = "0.4", features = ["clock"] }

# Data source (CSV / XLSX)
csv               = "1"
calamine          = "0.26"
umya-spreadsheet  = "2"

# String / file utilities
regex = "1"
glob  = "0.3"

# File dialogs
rfd = "0.15"

# Clipboard
arboard = "3"

# HTTP client
ureq   = { version = "2", features = ["json"] }
base64 = "0.22"


# Mail
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "rustls-tls", "builder"] }
imap       = { version = "2", default-features = false, features = ["tls"] }
native-tls = "0.2"

# Database (robost-stdlib db feature)
rusqlite = { version = "0.40", features = ["bundled"] }

# Archive
zip = "2"

# PDF text extraction
pdf-extract = "0.12"

# Desktop notification (optional feature)
notify-rust  = "4"

# Test utilities
tempfile = "3"
criterion = "0.8"

# Scheduler (cron expression parsing)
croner = "3"

# OS keychain credential storage
keyring = "4"

# FTP/FTPS client (robost-stdlib ftp feature)
suppaftp = { version = "9", features = ["native-tls"] }
