[package]
name = "robost-capture"
description = "Cross-platform screen and window capture with HiDPI awareness for desktop automation"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
keywords   = ["rpa", "automation", "screenshot", "screen-capture", "desktop"]
categories = ["multimedia::images", "os"]

[dependencies]
robost-template.workspace = true
xcap.workspace = true
image.workspace = true
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }
