[package]
name = "robost-cli"
description = "Command-line tool for running RPA automation scenarios with scheduling and plugin management"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
keywords   = ["rpa", "automation", "cli", "scheduler", "robot"]
categories = ["command-line-utilities"]

[[bin]]
name = "rpa"
path = "src/main.rs"

[features]
ocr  = ["robost-core/ocr"]
http = ["robost-core/http"]

[dependencies]
robost-template.workspace = true
robost-capture.workspace = true
robost-backend.workspace = true
robost-core.workspace = true
robost-plugin-api.workspace = true
robost-plugin-host.workspace = true
robost-stdlib.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
clap = { version = "4", features = ["derive"] }
ureq.workspace = true
tempfile.workspace = true
eframe.workspace = true
egui.workspace = true
tray-icon.workspace = true
rfd.workspace = true
chrono.workspace = true
croner.workspace = true
