[package]
name = "robost-cli"
description = "Command-line tool for running RPA automation scenarios with scheduling and plugin management"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
keywords   = ["rpa", "automation", "cli", "scheduler", "robot"]
categories = ["command-line-utilities"]

[[bin]]
name = "rpa"
path = "src/main.rs"

[features]
default = ["mail", "pdf", "archive", "keychain", "notify", "clipboard", "glob-pattern"]
ocr          = ["robost-core/ocr"]
windows-ocr  = ["robost-core/windows-ocr"]
ocrs-cjk-ocr = ["robost-core/ocrs-cjk-ocr"]
embed-editor = ["dep:rust-embed", "dep:mime_guess"]
http         = ["robost-core/http"]
mail         = ["robost-core/mail"]
pdf          = ["robost-core/pdf"]
archive      = ["robost-core/archive"]
keychain     = ["robost-core/keychain"]
notify       = ["robost-core/notify"]
clipboard    = ["robost-core/clipboard"]
glob-pattern = ["robost-core/glob-pattern"]

[dependencies]
robost-template.workspace = true
robost-capture.workspace = true
robost-input.workspace = true
robost-vision.workspace = true
robost-backend.workspace = true
robost-core.workspace = true
robost-uia.workspace = true
robost-plugin-api.workspace = true
robost-plugin-host.workspace = true
robost-stdlib.workspace = true
keyring.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
clap = { version = "4", features = ["derive"] }
ureq.workspace = true
tempfile.workspace = true
eframe.workspace = true
egui.workspace = true
tray-icon.workspace = true
rfd.workspace = true
chrono.workspace = true
croner.workspace = true
axum = { version = "0.8", features = ["multipart"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
image.workspace = true
rust-embed = { version = "8", optional = true }
mime_guess = { version = "2", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = ["Win32_UI_Shell"] }
