[package]
name = "robost-core"
description = "YAML-driven scenario engine for Rust RPA: branching, loops, retry, and sub-scenarios"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
keywords   = ["rpa", "automation", "scenario", "workflow", "yaml"]
categories = ["development-tools"]

[features]
ocr = ["robost-vision/ocr"]
ml  = ["robost-vision/ml"]
excel-write = ["dep:umya-spreadsheet"]
http = ["dep:ureq"]
uia = []
web = ["dep:robost-web"]
db  = ["robost-stdlib/db"]
ftp = ["robost-stdlib/ftp"]

[dependencies]
robost-template.workspace = true
robost-backend.workspace = true
robost-capture.workspace = true
robost-vision.workspace = true
robost-plugin-api.workspace = true
robost-script.workspace = true
robost-stdlib.workspace = true
robost-uia.workspace = true
robost-web = { workspace = true, optional = true }
image.workspace = true
xcap.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
rhai.workspace = true
chrono.workspace = true
csv.workspace = true
calamine.workspace = true
rust_xlsxwriter.workspace = true
umya-spreadsheet = { workspace = true, optional = true }
arboard.workspace = true
regex.workspace = true
glob.workspace = true
ureq         = { workspace = true, optional = true }
base64.workspace = true
rand.workspace = true
open.workspace = true
notify-rust.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }

[dev-dependencies]
tempfile.workspace = true
