[package]
name = "robost-core"
description = "YAML-driven scenario engine for Rust RPA: branching, loops, retry, and sub-scenarios"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
keywords   = ["rpa", "automation", "scenario", "workflow", "yaml"]
categories = ["development-tools"]

[features]
ocr = ["robost-vision/ocr", "_ocr"]
windows-ocr = ["robost-vision/windows-ocr", "_ocr"]
_ocr = []
ml  = ["robost-vision/ml"]
excel-write = []
http = ["dep:ureq"]
llm-ocr = ["dep:ureq"]
uia = []
web = ["dep:robost-web"]
db       = ["robost-stdlib/db"]
ftp      = ["robost-stdlib/ftp"]
mail     = ["robost-stdlib/mail"]
pdf      = ["robost-stdlib/pdf"]
archive  = ["robost-stdlib/archive"]
keychain = ["robost-stdlib/keychain"]
notify       = ["dep:notify-rust"]
clipboard    = ["dep:arboard"]
glob-pattern = ["dep:glob"]

[dependencies]
robost-template.workspace = true
robost-backend.workspace = true
robost-capture.workspace = true
robost-vision.workspace = true
robost-plugin-api.workspace = true
robost-script.workspace = true
robost-stdlib.workspace = true
robost-uia.workspace = true
robost-web = { workspace = true, optional = true }
image.workspace = true
xcap.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
rhai.workspace = true
chrono.workspace = true
csv.workspace = true
calamine.workspace = true
umya-spreadsheet.workspace = true
regex.workspace = true
ureq        = { workspace = true, optional = true }
notify-rust = { workspace = true, optional = true }
arboard     = { workspace = true, optional = true }
glob        = { workspace = true, optional = true }
base64.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }

[dev-dependencies]
tempfile.workspace = true
