[package]
name = "robost-editor"
description = "Visual scenario editor for Rust RPA — list view, flowchart, and integrated YAML editing"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
keywords   = ["rpa", "automation", "editor", "gui", "flowchart"]
categories = ["gui", "development-tools"]

[[bin]]
name = "robost-editor"
path = "src/main.rs"

[dependencies]
eframe.workspace = true
egui.workspace = true
serde_yml.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rfd.workspace = true
serde_json.workspace = true
ureq.workspace = true
toml.workspace = true
serde = { workspace = true, features = ["derive"] }
egui_commonmark = "0.22"
dirs.workspace = true
keyring.workspace = true
