[package]
name = "robost-input"
description = "Mouse and keyboard input emulation with window focus management for desktop automation"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
keywords   = ["rpa", "automation", "mouse", "keyboard", "desktop"]
categories = ["os", "gui"]

[dependencies]
robost-template.workspace = true
enigo.workspace = true
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
