[package]
name = "robost-plugin-host"
description = "wasmtime-based WASM plugin loader with WASI permission enforcement"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[features]
default = ["wasm"]
wasm = ["dep:wasmtime", "dep:wasmtime-wasi", "dep:serde_json"]

[dependencies]
robost-plugin-api.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
toml.workspace = true
serde.workspace = true

wasmtime      = { version = "40", optional = true }
wasmtime-wasi = { version = "40", features = ["p1"], optional = true }
serde_json    = { version = "1", optional = true }
