[package]
name = "robost-stdlib"
description = "Built-in node library for Rust RPA: image matching, clipboard, Excel, HTTP, scheduling, and more"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
keywords   = ["rpa", "automation", "stdlib", "workflow", "nodes"]
categories = ["development-tools"]

[features]
db      = ["dep:rusqlite"]
ftp     = ["dep:suppaftp"]
mail    = ["dep:lettre", "dep:imap", "dep:native-tls"]
pdf     = ["dep:pdf-extract"]
archive = ["dep:zip"]
keychain = ["dep:keyring"]

[dependencies]
robost-template.workspace = true
robost-backend.workspace = true
robost-vision.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
umya-spreadsheet.workspace = true
ureq.workspace = true
base64.workspace = true
lettre      = { workspace = true, optional = true }
imap        = { workspace = true, optional = true }
native-tls  = { workspace = true, optional = true }
rusqlite    = { workspace = true, optional = true }
suppaftp    = { workspace = true, optional = true }
zip         = { workspace = true, optional = true }
pdf-extract = { workspace = true, optional = true }
keyring     = { workspace = true, optional = true }
