[package]
name = "robost-uia"
description = "Windows UI Automation (UIA) integration for Rust RPA — interact by name, ID, or class"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
keywords   = ["rpa", "automation", "uia", "accessibility", "windows"]
categories = ["os::windows-apis", "gui"]

[dependencies]
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_UI_Accessibility",
    "Win32_Foundation",
] }
