[package]
name = "robost-vision"
description = "Multi-scale NCC template matching for desktop automation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["automation", "vision", "rpa", "template-matching", "ncc"]
categories = ["algorithms", "computer-vision"]

[package.metadata.docs.rs]
features = ["template-match"]

[features]
default = ["template-match"]
template-match = []
async = ["dep:tokio"]
ocr = ["dep:leptess"]
windows-ocr = []
ml         = ["dep:ort", "dep:ndarray"]
ml-vision  = ["dep:objc2", "dep:objc2-foundation", "dep:objc2-core-graphics", "dep:objc2-core-foundation"]
ocrs-cjk-ocr = ["dep:ocrs-cjk", "dep:rten"]

[dependencies]
serde.workspace = true
image.workspace = true
imageproc.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, optional = true }

leptess  = { version = "0.14", optional = true }
ort      = { version = "2.0.0-rc.12", optional = true }
ndarray  = { version = "0.17", optional = true }
ocrs-cjk = { git = "https://github.com/kent-tokyo/ocrs-cjk", rev = "2f72f76ac2152ee1112ee6b6e36048bab069f391", optional = true }
rten     = { version = "0.24.0", optional = true, default-features = false, features = ["rten_format"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Foundation",
    "Globalization",
    "Graphics_Imaging",
    "Media_Ocr",
    "Storage_Streams",
    "Win32_System_Com",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2                 = { version = "0.6", optional = true }
objc2-foundation      = { version = "0.3", optional = true, features = ["NSArray", "NSDictionary", "NSError", "NSString", "NSObject"] }
objc2-core-graphics   = { version = "0.3", optional = true, features = ["CGColorSpace", "CGDataProvider", "CGImage"] }
objc2-core-foundation = { version = "0.3", optional = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
