[package]
name = "robost-web"
description = "WebDriver browser automation for Rust RPA scenarios (Selenium/fantoccini integration)"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
publish = false
keywords   = ["rpa", "automation", "webdriver", "browser", "selenium"]
categories = ["web-programming", "development-tools::testing"]

[dependencies]
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
serde_json.workspace = true
fantoccini = "0.21"
image.workspace = true
base64.workspace = true
