[package]
name = "rpa-cli"
description = "CLI binary: run scenarios, manage plugins"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rpa"
path = "src/main.rs"

[features]
ocr  = ["rpa-core/ocr"]
http = ["rpa-core/http"]

[dependencies]
rpa-template.workspace = true
rpa-capture.workspace = true
rpa-backend.workspace = true
rpa-core.workspace = true
rpa-plugin-api.workspace = true
rpa-plugin-host.workspace = true
rpa-stdlib.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
clap = { version = "4", features = ["derive"] }
eframe.workspace = true
egui.workspace = true
tray-icon.workspace = true
rfd.workspace = true
chrono.workspace = true
croner.workspace = true
