[package]
name = "rpa-cli"
description = "Command-line tool for running RPA automation scenarios with scheduling and plugin management"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
keywords   = ["rpa", "automation", "cli", "scheduler", "robot"]
categories = ["command-line-utilities"]

[[bin]]
name = "rpa"
path = "src/main.rs"

[features]
ocr  = ["rpa-core/ocr"]
http = ["rpa-core/http"]

[dependencies]
rpa-template.workspace = true
rpa-capture.workspace = true
rpa-backend.workspace = true
rpa-core.workspace = true
rpa-plugin-api.workspace = true
rpa-plugin-host.workspace = true
rpa-stdlib.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
clap = { version = "4", features = ["derive"] }
eframe.workspace = true
egui.workspace = true
tray-icon.workspace = true
rfd.workspace = true
chrono.workspace = true
croner.workspace = true
