[package]
name = "rpa-core"
description = "Scenario engine: YAML parsing, step execution, retry, wait, and sub-scenario support"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
ocr = ["rpa-vision/ocr"]
ml  = ["rpa-vision/ml"]
excel-write = ["dep:umya-spreadsheet"]
http = ["dep:ureq"]
uia = []
web = ["dep:rpa-web"]

[dependencies]
rpa-template.workspace = true
rpa-backend.workspace = true
rpa-vision.workspace = true
rpa-plugin-api.workspace = true
rpa-script.workspace = true
rpa-stdlib.workspace = true
rpa-uia.workspace = true
rpa-web = { workspace = true, optional = true }
image.workspace = true
xcap.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
rhai.workspace = true
chrono.workspace = true
csv.workspace = true
calamine.workspace = true
rust_xlsxwriter.workspace = true
umya-spreadsheet = { workspace = true, optional = true }
arboard.workspace = true
regex.workspace = true
glob.workspace = true
ureq         = { workspace = true, optional = true }
open.workspace = true
notify-rust.workspace = true

[dev-dependencies]
tempfile.workspace = true
