[package]
name = "rpa-editor"
description = "Visual scenario editor for Rust RPA — list view, flowchart, and integrated YAML editing"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
keywords   = ["rpa", "automation", "editor", "gui", "flowchart"]
categories = ["gui", "development-tools"]

[[bin]]
name = "rpa-editor"
path = "src/main.rs"

[dependencies]
eframe.workspace = true
egui.workspace = true
serde_yml.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rfd.workspace = true
