[package]
name = "rpa-input"
description = "Mouse/keyboard input emulation with window focus management (enigo wrapper)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rpa-template.workspace = true
enigo.workspace = true
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
