[package]
name = "rpa-template"
description = "Shared types for rpa (Point, Rect, Target, template metadata)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rpa-vision.workspace = true
serde.workspace = true
serde_yml.workspace = true
thiserror.workspace = true
image.workspace = true
