[package]
name = "rpa-template"
description = "Shared coordinate and template metadata types for Rust RPA desktop automation"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
keywords   = ["rpa", "automation", "desktop-automation", "types"]
categories = ["development-tools"]

[dependencies]
rpa-vision.workspace = true
serde.workspace = true
serde_yml.workspace = true
thiserror.workspace = true
image.workspace = true
