[package]
name = "rpa-uia"
description = "Windows UI Automation integration for rpa-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_System_Com",
    "Win32_System_Variant",
    "Win32_UI_Accessibility",
    "Win32_Foundation",
] }
